Creacion de la pagina

--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./favicon-16x16.png" type="image/x-icon">
     <title>Regalo :)</title>
 </head>
 <body>
-    
+    <header>
+            <section class="textos header">
+                <h1>Feliz cumpleaños Cadagan!!!</h1>
+                <div class="wave"  style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 522.86,73.52 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div>
+               
+        </section>
+        <br>
+        <br>
+        <br>
+    </header>
+    <section>
+        <p class="text-gift">Cadagan el dia de hoy quiero que celebrarle este cumpleaños y quiero que sepa que agradezco al universo por  haberme encontrado con un amigo de tanta calidad me has ayudado en exámenes difíciles, en trabajos, dudas,ademas me has apoyado en momentos dificiles has sido un amigo fiel y una persona en quien confio plenamente por todo esto quiero darle mi propio regalo como agradecimiento por todo aqui esta tu regalo  <a href="./IMagens/target.png">here</a><span class="imagen_icon"></span>
+        </p>
+    </section>
 </body>
 </html>
