--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <br>
     </header>
     <section>
-        <p class="text-gift">Cadagan el dia de hoy quiero que celebrarle este cumpleaños y quiero que sepa que agradezco al universo por  haberme encontrado con un amigo de tanta calidad me has ayudado en exámenes difíciles, en trabajos, dudas,ademas me has apoyado en momentos dificiles has sido un amigo fiel y una persona en quien confio plenamente por todo esto quiero darle mi propio regalo como agradecimiento por todo aqui esta tu regalo  <a href="./IMagens/target.png">here</a><span class="imagen_icon"></span>
-        </p>
+        <p class="text-gift">Cadagan el dia de hoy quiero que celebrarle este cumpleaños y quiero que sepa que agradezco al universo por  haberme encontrado con un amigo de tanta calidad me has ayudado en exámenes difíciles, en trabajos, dudas,ademas me has apoyado en momentos dificiles has sido un amigo fiel y una persona en quien confio plenamente por todo esto quiero darle mi propio regalo como agradecimiento por todo aqui esta tu regalo  
+        </p><a href="./IMagens/target.png">here</a><span class="imagen_icon"></span>
     </section>
 </body>
 </html>
